<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_widget_responsive">Responsive</string>
    <string name="app_widget_responsive_desc">A widget that adapts its layout to different sizes</string>
    <string name="app_widget_card">Card</string>
    <string name="app_widget_card_desc">Minimalist and simplified style</string>
    <string name="app_widget_full">Full</string>
    <string name="app_widget_full_desc">The player screen directly on your desktop</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_shuffle_play">Shuffle play</string>
    <string name="action_queue_next">Queue next</string>
    <string name="shuffle_all_label">Shuffle all</string>
    <string name="shuffle_mode">Shuffle mode</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="shuffle_button_tip">Tap for normal shuffle. Long press for advanced options.</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_seek_backward">Seek backward</string>
    <string name="action_seek_forward">Seek forward</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="reset_action">Reset</string>
    <string name="action_more">More</string>
    <string name="import_action">Import</string>
    <string name="create_action">Create</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search your library…</string>
    <string name="action_voice_search">Voice search</string>
    <string name="speech_not_supported">Your device doesn\'t support speech input</string>
    <string name="search_artist_x_label">Search artist: %s</string>
    <string name="search_album_x_label">Search album: %s</string>
    <string name="search_list_x_label">Search list: %s</string>
    <string name="search_from_x_label">Search from \"%s\"</string>
    <string name="search_year_x_label">Search year: %s</string>
    <string name="search_in_folder_x">Search in folder: %s</string>
    <string name="search_last_added">Search latest music</string>
    <string name="search_playlists">Search playlists</string>
    <string name="shuffle_mode_album">Album shuffle</string>
    <string name="shuffle_mode_artist">Artist shuffle</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="back_action">Back</string>
    <string name="add_action">Add</string>
    <string name="delete_action">Delete</string>
    <string name="remove_action">Remove</string>
    <string name="clear_action">Clear</string>
    <string name="close_action">Close</string>
    <string name="continue_action">Continue</string>
    <string name="select_all_title">Select all</string>
    <string name="x_selected">%d selected</string>
    <string name="preparing_playback_title">Preparing</string>
    <string name="restoring_playback_state">Restoring playback state and queue…</string>
    <string name="playback_stopped_title">Playback stopped</string>
    <string name="playing_notification_description">The playing notification provides actions for play/pause etc.</string>
    <string name="playing_notification_name">Playing notification</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="no_device_playlists">No playlists</string>
    <string name="select_songs_title">Select songs</string>
    <string name="playlist_x_is_empty">Playlist %s is empty.</string>
    <string name="playlist_name_cannot_be_empty">Playlist name can\'t be empty</string>
    <string name="imported_playlist_x">Imported playlist \"%1$s\".</string>
    <string name="could_not_import_the_playlist_x">Couldn\'t import the playlist \"%s\"</string>
    <string name="there_are_no_importable_playlists">There are no importable playlists.</string>
    <string name="playlist_x_not_imported">Playlist %s not imported.</string>
    <string name="action_import_playlist">Import playlist…</string>
    <string name="select_playlists_title">Select playlists</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="new_playlist_action">New</string>
    <string name="add_playlist_title">Add to playlist</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="action_edit_playlist">Edit playlist</string>
    <string name="action_delete">Delete playlist</string>
    <string name="action_export_playlist">Export to file</string>
    <string name="action_clear_history">Clear history</string>
    <string name="history_cleared">History cleared</string>
    <string name="create_a_playlist">An empty playlist will be created. You can add songs later.</string>
    <string name="create_a_playlist_with_one_song">A playlist will be created and one song will be added to it.</string>
    <string name="create_a_playlist_with_x_songs">A playlist will be created and %d songs will be added automatically.</string>
    <string name="playlist_name_empty">Playlist name</string>
    <string name="playlist_description_hint">Playlist description (optional)</string>
    <string name="saved_playlist_x">Saved playlist %s.</string>
    <string name="playlist_updated">Playlist updated.</string>
    <string name="failed_to_save_playlist">Failed to save playlist.</string>
    <string name="saved_x_playlists">Saved %1$d playlists.</string>
    <string name="saved_x_playlists_failed_to_save_x">Saved %1$d playlists, failed to save %2$d.</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_playlist_x"><![CDATA[Delete playlist <b>%s</b>?]]></string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%d</b> playlists?]]></string>
    <string name="created_playlist_x">Created playlist \'%1$s\'.</string>
    <string name="could_not_create_playlist">Couldn\'t create playlist.</string>
    <string name="no_playlists_create_new">Press the \"New\" button to create a playlist</string>
    <string name="no_playlists_that_match_x">There are no playlists that match \"%s\"</string>
    <string name="songs_added_to_playlists">Songs added to playlists.</string>
    <string name="playlist_exists">Playlist %s already exists.</string>
    <string name="playlist_created">Playlist %s created successfully.</string>
    <string name="remove_song_from_playlist_title">Remove song from playlist</string>
    <string name="remove_songs_from_playlist_title">Remove songs from playlist</string>
    <string name="remove_song_x_from_playlist"><![CDATA[Remove the song <b>%1$s</b> from the playlist?]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[Remove <b>%1$d</b> songs from the playlist?]]></string>
    <string name="playlist_empty_text">Empty playlist</string>
    <string name="action_lyrics_editor">Lyrics editor</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="saving_changes">Saving changes</string>
    <string name="changes_saved_successfully">Changes saved successfully.</string>
    <string name="could_not_save_some_changes">Couldn\'t save some changes.</string>
    <string name="web_search">Web Search</string>
    <string name="where_do_you_want_to_search">Where do you want to search?</string>
    <string name="configure_action">Configure</string>
    <string name="blacklist_directory">Blacklist directory</string>
    <string name="add_directory">Add directory</string>
    <string name="remove_from_blacklist">Do you want to remove this directory from the blacklist?</string>
    <string name="remove_from_whitelist">Do you want to remove this directory from the whitelist?</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_clear_the_whitelist">Do you want to clear the whitelist?</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="deleted_one_song">Deleted one song</string>
    <string name="deleted_x_songs">Deleted %1$d songs</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_x_songs">Delete %d songs?</string>
    <string name="delete_the_song_x">Delete the song %s?</string>
    <string name="deleting_songs">Deleting songs, wait…</string>
    <string name="song_x_of_x">%1$d of %2$d • %3$s</string>
    <string name="no_equalizer">No equalizer found.</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="no_audio_ID">Bad audio ID.</string>
    <string name="playback_error_code">Playback error (%s).</string>
    <string name="unplayable_file">Couldn\'t play this song.</string>
    <string name="permission_external_storage_title">Storage Access</string>
    <string name="permission_external_storage_description">The app needs permission to access your device storage for playing music</string>
    <string name="permission_external_storage_denied">You must grant permission to access external storage.</string>
    <string name="permission_bluetooth_title">Nearby Devices</string>
    <string name="permission_bluetooth_description">The app needs nearby devices permission to check for bluetooth devices</string>
    <string name="permission_bluetooth_denied">Nearby devices permission denied.</string>
    <string name="favorites_label">Favorites</string>
    <string name="last_added_label">Last added</string>
    <string name="top_tracks_label">Top Tracks</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_shortcut_last_added_short">Last Added</string>
    <string name="app_shortcut_favorites_short">Favorites</string>
    <string name="settings_title">Settings</string>
    <string name="appearance_title">Appearance</string>
    <string name="now_playing_title">Now playing</string>
    <string name="lyrics_preferences_title">Lyrics</string>
    <string name="playback_title">Playback</string>
    <string name="library_title">Library</string>
    <string name="network_title">Network</string>
    <string name="advanced_title">Advanced</string>
    <string name="gestures_header">Gestures</string>
    <string name="display_header">Display</string>
    <string name="open_on_play_title">Open on play</string>
    <string name="open_on_play_summary">Expand the Now Playing panel automatically after start playing a song.</string>
    <string name="swipe_to_dismiss_title">Swipe down to dismiss</string>
    <string name="swipe_to_dismiss_summary">Swipe down on the mini player to stop playback and clear the playing queue.</string>
    <string name="mini_player_swipe_to_skip_title">Swipe mini player to skip</string>
    <string name="mini_player_swipe_to_skip_summary">Swipe left or right on the mini player to skip between songs.</string>
    <string name="display_extra_info_title">Display extra info</string>
    <string name="display_extra_info_summary">Display extra info about the song, like bitrate, format, sampling rate, etc.</string>
    <string name="select_extra_info_title">Extra info</string>
    <string name="select_extra_info_summary">Select the extra info to display in the player panel.</string>
    <string name="player_blur_intensity_title">Blur intensity</string>
    <string name="player_blur_intensity_summary">Adjust how strong the background blur appears in the Blur theme. Lower values may improve performance.</string>
</resources>