<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/gestures_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/mini_player_swipe_to_skip_title"
            app:summary="@string/mini_player_swipe_to_skip_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="mini_player_swipe_to_skip" />

        <SwitchPreferenceCompat
            app:title="@string/swipe_to_dismiss_title"
            app:summary="@string/swipe_to_dismiss_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="swipe_down_to_dismiss" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/display_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/display_extra_info_title"
            app:summary="@string/display_extra_info_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="display_extra_info" />

        <com.rc.axiom.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/select_extra_info_title"
            app:summary="@string/select_extra_info_summary"
            app:persistent="false"
            app:dependency="display_extra_info"
            app:layout="@layout/list_item_view"
            app:key="now_playing_extra_info" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/advanced_title"
        app:layout="@layout/preference_category_title">

        <SeekBarPreference
            app:icon="@drawable/ic_blur_linear_24dp"
            app:title="@string/player_blur_intensity_title"
            app:summary="@string/player_blur_intensity_summary"
            android:max="@integer/max_player_blur"
            app:min="@integer/min_player_blur"
            app:defaultValue="@integer/max_player_blur"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="player_blur_radius"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_keyboard_arrow_up_24dp"
            app:title="@string/open_on_play_title"
            app:summary="@string/open_on_play_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="open_on_play" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
