<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_last_added"
        android:shortcutId="last_added"
        android:shortcutLongLabel="@string/app_shortcut_last_added_short"
        android:shortcutShortLabel="@string/last_added_label">
        <intent
            android:action="com.rc.axiom.shortcut.LAST_ADDED"
            android:targetClass="com.rc.axiom.ui.screen.MainActivity"
            android:targetPackage="com.rc.axiom" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_top"
        android:shortcutId="top_tracks"
        android:shortcutLongLabel="@string/app_shortcut_top_tracks_short"
        android:shortcutShortLabel="@string/top_tracks_label">
        <intent
            android:action="com.rc.axiom.shortcut.TOP_TRACKS"
            android:targetClass="com.rc.axiom.ui.screen.MainActivity"
            android:targetPackage="com.rc.axiom" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_fav"
        android:shortcutId="favorites"
        android:shortcutLongLabel="@string/app_shortcut_favorites_short"
        android:shortcutShortLabel="@string/favorites_label">
        <intent
            android:action="com.rc.axiom.shortcut.FAVORITES"
            android:targetClass="com.rc.axiom.ui.screen.MainActivity"
            android:targetPackage="com.rc.axiom" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_shuffle_all"
        android:shortcutId="shuffle_all"
        android:shortcutLongLabel="@string/app_shortcut_shuffle_all_short"
        android:shortcutShortLabel="@string/shuffle_all_label">
        <intent
            android:action="com.rc.axiom.shortcut.SHUFFLE"
            android:targetClass="com.rc.axiom.ui.screen.MainActivity"
            android:targetPackage="com.rc.axiom" />
    </shortcut>
</shortcuts>
