<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_graph"
    app:startDestination="@id/nav_home_preferences">
    <fragment
        android:id="@+id/nav_home_preferences"
        android:name="com.rc.axiom.ui.screen.settings.PreferenceScreenFragment"
        android:label="@string/settings_title">
        <action
            android:id="@+id/action_to_appearancePreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_interface_preferences"/>
        <action
            android:id="@+id/action_to_nowPlayingPreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_now_playing_preferences"/>
        <action
            android:id="@+id/action_to_lyricsPreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_lyrics_preferences"/>
        <action
            android:id="@+id/action_to_playbackPreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_playback_preferences"/>
        <action
            android:id="@+id/action_to_metadataPreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_metadata_preferences"/>
        <action
            android:id="@+id/action_to_libraryPreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_library_preferences"/>
        <action
            android:id="@+id/action_to_networkPreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_network_preferences"/>
        <action
            android:id="@+id/action_to_advancedPreferences"
            app:enterAnim="@anim/axiom_fragment_open_enter"
            app:exitAnim="@anim/axiom_fragment_open_exit"
            app:popEnterAnim="@anim/axiom_fragment_close_enter"
            app:popExitAnim="@anim/axiom_fragment_close_exit"
            app:destination="@+id/nav_advanced_preferences"/>
    </fragment>
    <fragment
        android:id="@+id/nav_interface_preferences"
        android:name="com.rc.axiom.ui.screen.settings.AppearancePreferencesFragment"
        android:label="@string/appearance_title"/>
    <fragment
        android:id="@+id/nav_now_playing_preferences"
        android:name="com.rc.axiom.ui.screen.settings.NowPlayingPreferencesFragment"
        android:label="@string/now_playing_title"/>
    <fragment
        android:id="@+id/nav_lyrics_preferences"
        android:name="com.rc.axiom.ui.screen.settings.LyricsPreferencesFragment"
        android:label="@string/lyrics_preferences_title"/>
    <fragment
        android:id="@+id/nav_playback_preferences"
        android:name="com.rc.axiom.ui.screen.settings.PlaybackPreferencesFragment"
        android:label="@string/playback_title"/>
    <fragment
        android:id="@+id/nav_library_preferences"
        android:name="com.rc.axiom.ui.screen.settings.LibraryPreferencesFragment"
        android:label="@string/library_title"/>
    <fragment
        android:id="@+id/nav_network_preferences"
        android:name="com.rc.axiom.ui.screen.settings.NetworkPreferencesFragment"
        android:label="@string/network_title"/>
    <fragment
        android:id="@+id/nav_advanced_preferences"
        android:name="com.rc.axiom.ui.screen.settings.AdvancedPreferencesFragment"
        android:label="@string/advanced_title"/>
</navigation>